syntax = "proto2";

package cloudprober;

import "github.com/cloudprober/cloudprober/probes/proto/config.proto";

option go_package = "github.com/cloudprober/cloudprober/prober/proto";

service Cloudprober {
  // AddProbe adds a probe to cloudprober. Error is returned if probe is already
  // defined or there is an error during initialization of the probe.
  rpc AddProbe(AddProbeRequest) returns (AddProbeResponse) {}

  // RemoveProbe stops the probe and removes it from the in-memory database.
  rpc RemoveProbe(RemoveProbeRequest) returns (RemoveProbeResponse) {}

  // ListProbes lists active probes.
  rpc ListProbes(ListProbesRequest) returns (ListProbesResponse) {}

  rpc SaveProbesConfig(SaveProbesConfigRequest) returns (SaveProbesConfigResponse) {}
}

message AddProbeRequest {
  optional probes.ProbeDef probe_config = 1;
}

message AddProbeResponse {}

message RemoveProbeRequest {
  optional string probe_name = 1;
}

message RemoveProbeResponse {}

message ListProbesRequest {}

message Probe {
  optional string name = 1;
  optional probes.ProbeDef config = 2;
}

message ListProbesResponse {
  repeated Probe probe = 1;
}

message SaveProbesConfigRequest {
  // File path to save probes config to. Default is configured through the
  // command-line flag: --probes_config_save_path
  optional string file_path = 1;
}

message SaveProbesConfigResponse {
  optional string file_path = 1;
}
